# jazzy

./: Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS
src/: main.rs
src/infrastructure/: error.rs  file.rs  log.rs  mod.rs
src/interpreter/: interpreter.rs  interpreter_data.rs  mod.rs  tests.rs
src/parser/: mod.rs  parser.rs  parser_data.rs  tests.rs
src/scanner/: mod.rs  scanner.rs  scanner_data.rs  tests.rs
src/semantic_checker/: mod.rs  semantic_checker.rs  semantic_checker_data.rs  tests.rs
test_files/: parser-test.jzy  scanner-test.jzy
