[package]
name = "jazzy"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
unicode-segmentation = "1.10.1"
unicode-normalization = "0.1.22"
unicode-xid = "0.0.4"
clap = { version = "4.3.17", features = ["derive"] }
rustyline = "12.0.0"
